Changes by naman index.html commit

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,6 +13,11 @@
     </ul>
     <h1>Indx</h1>
     <p>
+        this is naman branch text
+
+
+        hello thi is tect from master branch
+        
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel eveniet
       expedita molestiae nam dignissimos aspernatur odio quo eum. Perferendis
       delectus iusto distinctio quam veritatis dicta eos incidunt impedit minus
