Changes by master index.html commit

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,6 +13,9 @@
     </ul>
     <h1>Indx</h1>
     <p>
+
+        new  master branch text 
+        
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel eveniet
       expedita molestiae nam dignissimos aspernatur odio quo eum. Perferendis
       delectus iusto distinctio quam veritatis dicta eos incidunt impedit minus
