--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,7 +12,11 @@
         <li><a href="/contact">Contact</a></li>
     </ul>
     <h1>Contact</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel eveniet expedita molestiae nam dignissimos aspernatur odio quo eum.
+    <p>
+        
+        hellow naman
+        
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel eveniet expedita molestiae nam dignissimos aspernatur odio quo eum.
          Perferendis delectus iusto distinctio quam veritatis dicta eos incidunt impedit minus dignissimos.</p>
 </body>
 </html>
